--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "server.js"
     "test": "mocha tests/*.test.js "
   },
   "keywords": [],
