--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "main": "index.js",
   "scripts": {
     "start": "server.js",
-    "test": "mocha tests/*.test.js "
+    "test": "SET NODE_ENV=test &&  mocha tests/*.test.js "
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.0",
     "body-parser": "^1.15.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.14.0",
+    "jsonwebtoken": "^7.2.1",
+    "lodash": "^4.17.4",
     "mongodb": "^2.2.16",
-    "mongoose": "^4.7.2"
+    "mongoose": "^4.7.2",
+    "validator": "^6.2.1"
   },
   "devDependencies": {
     "expect": "^1.20.2",
