--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "server.js",
+    "start": "node server.js",
     "test": "SET NODE_ENV=test &&  mocha tests/*.test.js "
   },
   "engines": {
